fix: annoying UI shift

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -31,7 +31,7 @@
   margin-top: 1.5rem;
   display: flex;
   justify-content: center;
-  min-height: 60px;
+  min-height: 88px;
 }
 
 .share-url-container {
